--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
       <id>dev</id>
       <properties>
         <!-- 环境标识，需要与配置文件的名称相对应 -->
-        <profiles.active>dev</profiles.active>
+        <profileActive>dev</profileActive>
       </properties>
       <activation>
         <!-- 默认环境 -->
@@ -82,7 +82,7 @@
     <profile>
       <id>prod</id>
       <properties>
-        <profiles.active>prod</profiles.active>
+        <profileActive>prod</profileActive>
       </properties>
     </profile>
   </profiles>
