add: 添加错误推送

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 
     <dependency>
       <groupId>top.liyf</groupId>
+      <artifactId>fly-redis</artifactId>
+      <version>${parent.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>top.liyf</groupId>
       <artifactId>fly-common-feign</artifactId>
       <version>${parent.version}</version>
     </dependency>
