--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
       <artifactId>spring-boot-starter-oauth2-client</artifactId>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.geccocrawler/gecco-spring -->
+    <dependency>
+      <groupId>com.geccocrawler</groupId>
+      <artifactId>gecco-spring</artifactId>
+      <version>1.3.0</version>
+    </dependency>
+
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
