--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
       <artifactId>spring-boot-starter-oauth2-client</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.session</groupId>
+      <artifactId>spring-session-data-redis</artifactId>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/com.geccocrawler/gecco-spring -->
     <dependency>
       <groupId>com.geccocrawler</groupId>
