--- a/pom.xml
+++ b/pom.xml
@@ -78,44 +78,11 @@
       <artifactId>spring-session-data-redis</artifactId>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.geccocrawler/gecco-spring -->
+    <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
     <dependency>
-      <groupId>com.geccocrawler</groupId>
-      <artifactId>gecco-spring</artifactId>
-      <version>1.3.0</version>
-      <exclusions>
-        <exclusion>
-          <groupId>log4j</groupId>
-          <artifactId>log4j</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.httpcomponents</groupId>
-          <artifactId>httpclient</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
-        </exclusion>
-        <exclusion>
-          <artifactId>javassist</artifactId>
-          <groupId>org.javassist</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>asm</artifactId>
-          <groupId>org.ow2.asm</groupId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.alibaba</groupId>
-          <artifactId>fastjson</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
-    <dependency>
-      <groupId>com.alibaba</groupId>
-      <artifactId>fastjson</artifactId>
-      <version>1.2.76</version>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.14.3</version>
     </dependency>
 
 
