--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
       <version>1.14.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>cn.hutool</groupId>
+      <artifactId>hutool-all</artifactId>
+      <version>5.8.0.M2</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.projectlombok</groupId>
